--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <section class="two-col-section" style="border-bottom: 6px solid #222">
-      <div class="container custom-container">
+      <div class="container custom-container video-section">
         <div class="d-md-flex">
           <div class="d-flex flex-column justify-content-center">
             <div class="text-part">
@@ -80,8 +80,15 @@
               </p>
             </div>
           </div>
-          <div class="media">
-            <img src="/images/tv.png" alt="" class="col-two-images" />
+          <div class="main-video-container">
+            <div class="media media-video-section">
+              <img src="/images/tv.png" alt="" class="col-two-images video-img" />
+              <div class="media-video-div" data-uia="our-story-card-animation">
+                <video class="media-video" data-uia="our-story-card-video" autoplay="" playsinline="" muted="" loop=""><source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" type="video/mp4"></video>
+                <div class="our-story-card-animation-text"></div><div class="our-story-card-animation-custom" data-uia="our-story-card-custom" aria-hidden="true">
+                </div>
+              </div>
+            </div>
           </div>
         
         </div>
