--- a/public/html/main.html
+++ b/public/html/main.html
@@ -47,6 +47,7 @@
                 </div>
             </div>
             <button class="nxt-btn"><img src="../images/nxt.png" alt=""></button>
+            <p id="testing"></p>
         </div>
     </header>
     </section>
